Fixed border-radius of inner Select on Firefox

--- a/src/styles/react-translatable-input.styl
+++ b/src/styles/react-translatable-input.styl
@@ -25,6 +25,7 @@ $langSelectWideWidth = 150px
       height 100%
       width 100%
       border-right 1px solid #ccc
+      border-radius $borderRadius 0 0 $borderRadius
     .flag-icon
       position absolute
       top 50%
@@ -99,3 +100,4 @@ $langSelectWideWidth = 150px
         border-radius $borderRadius $borderRadius 0 0
       .Select-value
         border-right none
+        border-radius $borderRadius $borderRadius 0 0
